# gst-plugins-midi

./: Makefile.am  autogen.sh  configure  configure.ac  doit.sh
ext/: Makefile.am  Makefile.am~
ext/alsa/: Makefile.am  gstamidisink.c  gstamidisink.h  gstamidisrc.c  gstamidisrc.h
ext/fluidsynth/: Makefile.am  gstfluidsynth.c  gstfluidsynth.h
gst/midi/: Makefile  Makefile.am  gstfluidsynth.c  gstmidibuffer.c  gstmidibuffer.h  gstsmfdec.c
m4/: Makefile.in
